# UserManagementSSDD

./: README.md  pyproject.toml  run_client  run_icestorm
IceStorm/: data.mdb
config/: client.config  icebox.config  icestorm.config  usersmanager.config
docs/: enunciado.md
usersmanager/: __init__.py  client.py  command_handlers.py  delayed_response.py  manager.py  server.py  session.py  usersmanager.ice  usersmanager_ice.py
